<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.ticketsmanagement.ThirdActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Button_submit"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1.0"/>

    <Spinner
        android:id="@+id/spinincreate"
        android:layout_width="216dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintVertical_bias="0.384"/>
    <EditText
        android:id="@+id/contact"
        android:hint="@string/contact"
        android:gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        app:layout_constraintTop_toBottomOf="@+id/spinincreate"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        android:inputType="number"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintVertical_bias="0.282"/>
    <Spinner
        android:id="@+id/location"
        android:hint="@string/loc"
        android:gravity="left"
        android:layout_width="216dp"
        android:layout_height="45dp"
        android:ems="10"
        app:layout_constraintTop_toBottomOf="@+id/contact"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="parent"

        android:entries="@array/Location"
        app:layout_constraintVertical_bias="0.332"
        />
    <EditText
        android:id="@+id/description"
        android:hint="@string/desc"
        android:gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        app:layout_constraintTop_toBottomOf="@+id/location"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        android:inputType="text"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintVertical_bias="0.439"/>

    <EditText
        android:id="@+id/Ticket_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="left"
        android:hint="@string/Title"
        app:layout_constraintBottom_toTopOf="@+id/description"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="text"

        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintVertical_bias="0.491"/>



</android.support.constraint.ConstraintLayout>
